Added some code of template made by Joris

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,7 +1,8 @@
-description=A Flink Application Project Using sbt
+description=A CodeFeedr Plugin
 
-name=Flink Project
+name=CodeFeedr plugin
 organization=org.example
 version=0.1-SNAPSHOT
-scala_version=2.11.12
+scala_version=2.11.11
 flink_version=maven(org.apache.flink, flink-scala_2.11)
+codefeedr_version=0.1-SNAPSHOT
