Made template compatible with CodeFeedr 0.1.0

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,6 +3,6 @@ description=A CodeFeedr Plugin
 name=CodeFeedr plugin
 organization=org.example
 version=0.1-SNAPSHOT
-scala_version=2.11.11
-flink_version=maven(org.apache.flink, flink-scala_2.11)
-codefeedr_version=0.1-SNAPSHOT
+scala_version=2.12.8
+flink_version=maven(org.apache.flink, flink-scala_2.12)
+codefeedr_version=0.1.0
