--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -5,4 +5,4 @@ organization=org.example
 version=0.1-SNAPSHOT
 scala_version=2.12.8
 flink_version=maven(org.apache.flink, flink-scala_2.12)
-codefeedr_version=maven(org.codefeedr, core_2.12)
+codefeedr_version=maven(org.codefeedr, codefeedr-core_2.12)
